--- a/16_Shop_MultiProduct/theme/style.red.css
+++ b/16_Shop_MultiProduct/theme/style.red.css
@@ -38,3 +38,7 @@ body{
     background-color: #d11222;
 }
 
+.group-read-more .read-more {    
+    background-color: #d11222;    
+    border: 2px solid #d11222;
+}
