--- a/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -306,7 +306,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-md-12 ">
-                        <a href="/" title="Continue Shopping" class="btn button btn-continue" onclick=""><span><span>Mua thêm</span></span></a>
+                        @*<a href="/" title="Continue Shopping" class="btn button btn-continue" onclick=""><span><span>Mua thêm</span></span></a>*@
 
                         <button type="submit" name="update_cart_action" value="update_qty" title="Update Cart" class="checkout-button button alt wc-forward pull-right" id="orderBtn" style="margin-top:15px;">
                             <span>
